Thu Apr 02 17:54:23 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/highlight.py: Add a simple cache for stemming in
	  highlighters - improves performance noticeably in some cases (I
	  measured about a 20% improvement in highlighting speed for a
	  database in which the documents are produce descriptions,
	  compared to a 50% improvement if I turn stemming in highlighting
	  off completely).

Thu Apr 02 17:25:33 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/highlight.py: Avoid parsing the query into terms repeatedly
	  when highlight is called for multiple fields with the same query.

Thu Apr 02 15:47:31 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Implement the allow and deny
	  parameters for relevant_data()

Wed Apr 01 11:07:25 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* libs/get_xapian.py,utils/make_xappy_tarballs: Update with new
	  branchpoints and tarballs.

Fri Mar 27 13:41:17 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* libs/get_xapian.py: Update xapian-extras packages.

Fri Mar 27 12:49:36 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/doctests/indexerconnection_doctest2.txt: Explicitly access
	  the hit data when trying to trigger DatabaseModifiedError - data
	  is now read lazily, so the test was failing with the new
	  tarballs.

Fri Mar 27 12:37:10 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Update reset() to init() in posting
	  source, and handle missing field action in _get_approx_params.

Fri Mar 27 12:31:26 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Add "assume_single_value" parameter to
	  _cluster(), to let it know that all fields in use are
	  single-valued.  Also, add support for doing range acceleration
	  searches using terms and values where the terms cover the range,